force-app/main/default/objects/Refund_PAX_Detail__c/Refund_PAX_Detail__c.object-meta.xml
<CustomObject>
    <label>Refund PAX Detail</label>
    <nameField>
        <displayFormat>RD{YYYY}{MM}{00000000}</displayFormat>
        <label>Refund PAX Detail No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refund PAX Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>