force-app/main/default/objects/Refund_PAX_Detail__c/fields/Booking_Reference_PNR__c.field-meta.xml
<CustomField>
    <fullName>Booking_Reference_PNR__c</fullName>
    <label>Booking Reference (PNR)</label>
    <length>6</length>
    <type>Text</type>
</CustomField>