force-app/main/default/objects/Refund_PAX_Detail__c/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <label>Case ID</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Refund_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>