force-app/main/default/objects/Refund_PAX_Detail__c/fields/Flight_Segment__c.field-meta.xml
<CustomField>
    <fullName>Flight_Segment__c</fullName>
    <label>Flight Segment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>