force-app/main/default/objects/Refund_PAX_Detail__c/fields/Group_Booking_Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Group_Booking_Departure_Date__c</fullName>
    <formula>Case_ID__r.Group_Booking_Departure_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Booking Departure Date</label>
    <type>Date</type>
</CustomField>