force-app/main/default/objects/Refund_PAX_Detail__c/fields/Group_Booking_Route__c.field-meta.xml
<CustomField>
    <fullName>Group_Booking_Route__c</fullName>
    <formula>Case_ID__r.Group_Booking_Route__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Booking Route</label>
    <type>Text</type>
</CustomField>