force-app/main/default/objects/Refund_PAX_Detail__c/fields/Group_Bulk_Refund__c.field-meta.xml
<CustomField>
    <fullName>Group_Bulk_Refund__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Group Bulk Refund</label>
    <type>Checkbox</type>
</CustomField>