force-app/main/default/objects/Refund_PAX_Detail__c/fields/Need_Approval__c.field-meta.xml
<CustomField>
    <fullName>Need_Approval__c</fullName>
    <formula>And(

Or(Waive_Surcharge__c, Group_Bulk_Refund__c,  One_Way__c  ),

Not  Reject__c

 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Need Approval ？</label>
    <type>Checkbox</type>
</CustomField>