force-app/main/default/objects/Refund_PAX_Detail__c/fields/One_Way__c.field-meta.xml
<CustomField>
    <fullName>One_Way__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One Way</label>
    <type>Checkbox</type>
</CustomField>