force-app/main/default/objects/Refund_PAX_Detail__c/fields/Other_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Other_Reasons__c</fullName>
    <label>Other Reasons</label>
    <type>TextArea</type>
</CustomField>