force-app/main/default/objects/Refund_PAX_Detail__c/fields/Passenger_Name__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Name__c</fullName>
    <label>Passenger Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>