force-app/main/default/objects/Refund_PAX_Detail__c/fields/Refund_Reason__c.field-meta.xml
<CustomField>
    <fullName>Refund_Reason__c</fullName>
    <label>Refund Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>重複開票(Multiple Ticketing)</fullName>
            </value>
            <value>
                <fullName>航班變動及取消(Flight Cancel/Change)</fullName>
            </value>
            <value>
                <fullName>機位超賣(Overselling)</fullName>
            </value>
            <value>
                <fullName>簽證問題(Visa Issue)</fullName>
            </value>
            <value>
                <fullName>交通事故(Traffic Accident)</fullName>
            </value>
            <value>
                <fullName>天災人禍(Uncontrollable Accident)</fullName>
            </value>
            <value>
                <fullName>疾病不能成行(Disease)</fullName>
            </value>
            <value>
                <fullName>死亡(Death)</fullName>
            </value>
            <value>
                <fullName>其它特殊狀況(Other Special Reason)</fullName>
            </value>
            <value>
                <fullName>Dupe Booking</fullName>
                <isActive>false</isActive>
                <label>Dupe Booking</label>
            </value>
            <value>
                <fullName>Flight Cancellation/Delay</fullName>
                <isActive>false</isActive>
                <label>Flight Cancellation/Delay</label>
            </value>
            <value>
                <fullName>Involuntary(Death/Health Issues)</fullName>
                <isActive>false</isActive>
                <label>Involuntary(Death/Health Issues)</label>
            </value>
            <value>
                <fullName>No Show</fullName>
                <isActive>false</isActive>
                <label>No Show</label>
            </value>
            <value>
                <fullName>Others (Please fill in Other Reasons column)</fullName>
                <isActive>false</isActive>
                <label>Others (Please fill in Other Reasons column)</label>
            </value>
            <value>
                <fullName>Voluntary</fullName>
                <isActive>false</isActive>
                <label>Voluntary</label>
            </value>
            <value>
                <fullName>一般退票(Normal Refund)</fullName>
                <isActive>false</isActive>
                <label>一般退票(Normal Refund)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>