force-app/main/default/objects/Refund_PAX_Detail__c/fields/Surcharge_Amount__c.field-meta.xml
<CustomField>
    <fullName>Surcharge_Amount__c</fullName>
    <label>Surcharge Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>