force-app/main/default/objects/Refund_PAX_Detail__c/fields/Tax_Only__c.field-meta.xml
<CustomField>
    <fullName>Tax_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Only</label>
    <type>Checkbox</type>
</CustomField>