force-app/main/default/objects/Refund_PAX_Detail__c/fields/Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number__c</fullName>
    <label>Ticket Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>