force-app/main/default/objects/Refund_PAX_Detail__c/fields/Tier_1_Approver__c.field-meta.xml
<CustomField>
    <fullName>Tier_1_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tier 1 Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Refund_PAX_Details</relationshipName>
    <type>Lookup</type>
</CustomField>