force-app/main/default/objects/Refund_PAX_Detail__c/fields/Travel_Agency__c.field-meta.xml
<CustomField>
    <fullName>Travel_Agency__c</fullName>
    <formula>Case_ID__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travel Agency</label>
    <type>Text</type>
</CustomField>