force-app/main/default/objects/Refund_PAX_Detail__c/fields/Waive_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Waive_Surcharge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waive Surcharge</label>
    <type>Checkbox</type>
</CustomField>