force-app/main/default/objects/Refund_PAX_Detail__c/validationRules/Group_Booking_Refund_Fill_Other_Reasons.validationRule-meta.xml
<ValidationRule>
    <fullName>Group_Booking_Refund_Fill_Other_Reasons</fullName>
    <active>true</active>
    <description>If select reasons &quot;Others&quot;, need to fill the details</description>
    <errorConditionFormula>And(Contains( Text(Refund_Reason__c ),&quot;Other&quot;),  

Isblank( Other_Reasons__c ) 
    )</errorConditionFormula>
    <errorDisplayField>Other_Reasons__c</errorDisplayField>
    <errorMessage>If select reasons &quot;Others&quot;, need to fill the details</errorMessage>
</ValidationRule>