force-app/main/default/objects/Refund_PAX_Detail__c/validationRules/Need_input_Surcharge_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Need_input_Surcharge_Amount</fullName>
    <active>true</active>
    <description>Need fill waive Surcharge Amount if check Waive Surcharge</description>
    <errorConditionFormula>And( Waive_Surcharge__c ,
isblank( Surcharge_Amount__c ),
 Contains( $Profile.Name ,&quot;B2B Sales Agent&quot;)
)</errorConditionFormula>
    <errorDisplayField>Surcharge_Amount__c</errorDisplayField>
    <errorMessage>Please input Surcharge Amount if checked to Waive Surcharge</errorMessage>
</ValidationRule>