force-app/main/default/objects/Refund_PAX_Detail__c/validationRules/Not_Allow_change_Wave_Surcharge_or_Group.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Allow_change_Wave_Surcharge_or_Group</fullName>
    <active>true</active>
    <description>Travel Agent not allow to change waive surcharge or group bulk refund</description>
    <errorConditionFormula>And(Not isnew(),
    Contains( $Profile.Name ,&quot;B2B Travel Agent&quot;),

Or(    Ischanged( Waive_Surcharge__c ),  
       Ischanged ( Group_Bulk_Refund__c )

)

   )</errorConditionFormula>
    <errorDisplayField>Waive_Surcharge__c</errorDisplayField>
    <errorMessage>Not allow to change Waive Surcharge Status or check Group bulk refund after creation</errorMessage>
</ValidationRule>