force-app/main/default/objects/Refund_PAX_Detail__c/validationRules/Not_Allow_to_Waive_Surcharge.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Allow_to_Waive_Surcharge</fullName>
    <active>true</active>
    <description>Not Allow to waive surcharge if select Normal Refund</description>
    <errorConditionFormula>And(Contains(Text( Refund_Reason__c),&quot;Normal Refund&quot;),  Waive_Surcharge__c,

Contains( $Profile.Name ,&quot;B2B Travel Agent&quot;)


 )</errorConditionFormula>
    <errorMessage>Normal Refund Not Allow to Waive Surcharge</errorMessage>
</ValidationRule>