force-app/main/default/objects/Refund_PAX_Detail__c/validationRules/Not_fill_Flight_Segment.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_fill_Flight_Segment</fullName>
    <active>true</active>
    <description>If One way checked, need fill flight segment</description>
    <errorConditionFormula>And( Not One_Way__c , Not Isblank( Flight_Segment__c ))</errorConditionFormula>
    <errorDisplayField>One_Way__c</errorDisplayField>
    <errorMessage>You need check &quot;One Way&quot; if you fill Flight Segment</errorMessage>
</ValidationRule>