force-app/main/default/objects/Refund_PAX_Detail__c/validationRules/Not_input_any_amount_if_Reject.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_input_any_amount_if_Reject</fullName>
    <active>true</active>
    <description>Not input any amount if it&apos;s rejected</description>
    <errorConditionFormula>And( Reject__c , Or(Not isblank( Tax_Amount__c ),Not isblank( Surcharge__c ), Not Isblank( Refund_Amount__c )) 
)</errorConditionFormula>
    <errorMessage>Not input any amount if refund is rejected</errorMessage>
</ValidationRule>