force-app/main/default/objects/Refund_PAX_Detail__c/validationRules/Please_fill_Flight_Segment.validationRule-meta.xml
<ValidationRule>
    <fullName>Please_fill_Flight_Segment</fullName>
    <active>true</active>
    <description>If One way checked, need fill flight segment</description>
    <errorConditionFormula>And( One_Way__c , Isblank( Flight_Segment__c ))</errorConditionFormula>
    <errorDisplayField>Flight_Segment__c</errorDisplayField>
    <errorMessage>Please fill flight segment if checked One Way.</errorMessage>
</ValidationRule>